Archivos para configurar correo

--- a/stylesheets/landings.css
+++ b/stylesheets/landings.css
@@ -151,7 +151,7 @@ iframe.c1 {
 
 /*--- Part 2:   #Contact     ---*/
 .pixfort_normal_1 .page_style {
-    background:linear-gradient(to bottom,rgba(0,175,239,0) 0%,rgba(0,175,239,0) 2%,rgba(0,175,239,0) 7%,rgba(240,47,23,0) 11%,rgba(124,109,127,0) 54%,rgba(0,175,239,0.39) 100%),url(../images/1_normal/home-bg.png) #000 fixed no-repeat;
+    background:linear-gradient(to bottom,rgba(0,175,239,0) 0%,rgba(0,175,239,0) 2%,rgba(0,175,239,0) 7%,rgba(240,47,23,0) 11%,rgba(124,109,127,0) 54%,rgba(0,175,239,0.39) 100%),url(../images/FInanzasPyme12.jpg) #000 fixed no-repeat;
     -webkit-background-size:cover;
     -moz-background-size:cover;
     -o-background-size:cover;
@@ -164,9 +164,9 @@ iframe.c1 {
 
 .pixfort_normal_1 .title_style {
     font-size:48px;
-    color:#fff;
+    /*color:#fff;*/
     
-    font-weight:700;
+    font-weight:400;
     padding-top:160px;
     line-height:100%
 }
@@ -175,7 +175,7 @@ iframe.c1 {
     max-width:640px;
     margin-left:auto;
     margin-right:auto;
-    color:#d3d3d3;
+    /*color:#d3d3d3;*/
     font-size:18px;
     line-height:150%;
     
@@ -563,7 +563,7 @@ iframe.c1 {
 }
 
 .confirm_page_1 {
-    background:#00aeef;
+    background:#fff;
     box-shadow:inset 0 -5px 0 0 rgba(0,0,0,0.3)!important;
     border-radius:2px
 }
@@ -571,7 +571,7 @@ iframe.c1 {
 .confirm_page_1 .conf_img {
     border-radius:100%;
     display:inline-block;
-    border:2px solid #fff;
+    border:2px solid #848484;
     padding:25px;
     margin-top:15px;
     margin-bottom:5px;
@@ -585,7 +585,7 @@ iframe.c1 {
 
 .pixfort_normal_1 .confirm_header {
     text-align:center;
-    color:#fff;
+    color:#848484;
     line-height:35px;
     width:500px;
     max-width:100%;
@@ -597,7 +597,7 @@ iframe.c1 {
 .pixfort_normal_1 .confirm_text {
     text-align:center;
     font-size:16px;
-    color:rgba(255,255,255,0.5);
+    color:#848484;
     padding-top:10px;
     padding-bottom:30px;
     font-weight:700
@@ -2126,7 +2126,8 @@ iframe.c1 {
 
 /*---  Part 2:  #Contact   ---*/
 .pixfort_real_estate_4 .page_style {
-    background:linear-gradient(rgba(138,186,86,0),rgba(138,186,86,0.7) 80%),url(../images/FInanzasPyme.jpg) fixed no-repeat center top; 
+    background:url(../images/FInanzasPyme12.jpg) fixed no-repeat center top;
+    background-size: 80%; 
     -webkit-background-size:cover;
     -moz-background-size:cover;
     -o-background-size:cover;
@@ -2134,7 +2135,11 @@ iframe.c1 {
 }
 
 .pixfort_real_estate_4 .text_page {
+
+   /*background:rgba(1,169,219,0.3) ; */
     text-align:center
+
+
 }
 
 .pixfort_real_estate_4 .home_st {
@@ -2144,9 +2149,9 @@ iframe.c1 {
 
 .pixfort_real_estate_4 .start_style {
     text-align:center;
-    font-size:48px;
+    font-size:30px;
     font-weight:700;
-    color:#AE0202
+    color:rgb(102, 102, 102);
 }
 
 .pixfort_real_estate_4 .txt_start {
@@ -2159,7 +2164,7 @@ iframe.c1 {
 }
 
 .pixfort_real_estate_4 .gethouse_btn a {
-    background:#AE0202;
+    background:#00aeef;
     border:none;
     border-radius:3px;
     font-weight:400;
@@ -2173,7 +2178,7 @@ iframe.c1 {
 }
 
 .pixfort_real_estate_4 .gethouse_btn a:hover {
-    background:#832726;
+    background:#00aeef;
     border:none;
     border-radius:3px;
     font-weight:400;
@@ -2727,7 +2732,7 @@ iframe.c1 {
 
 .pixfort_real_estate_4 .confirm_header {
     text-align:center;
-    color:#fff;
+    /*color:#fff;*/
     margin-left:auto;
     margin-right:auto;
     line-height:35px;
@@ -2743,7 +2748,7 @@ iframe.c1 {
 .pixfort_real_estate_4 .confirm_text {
     text-align:center;
     font-size:16px;
-    color:rgba(255,255,255,0.7);
+   /* color:rgba(255,255,255,0.7);*/
     
     padding-top:10px;
     padding-bottom:30px;
@@ -2762,7 +2767,7 @@ iframe.c1 {
 }
 
 .pixfort_real_estate_4 .confirm_social .confirm_social_box {
-    background:rgba(0,0,0,0.2);
+    /*background:rgba(0,0,0,0.2);*/
     display:inline-block;
     margin-right:auto;
     margin-left:auto;
@@ -3776,7 +3781,7 @@ iframe.c1 {
 }
 
 .pixfort_university_6 .subject_st {
-    color:#a9a9a9;
+   /* color:#a9a9a9;*/
     font-size:16px;
     
     line-height:26px;
@@ -3806,7 +3811,7 @@ iframe.c1 {
 }
 
 .pixfort_university_6 .send_btn .submit_btn {
-    background:#7cc576;
+    background:#00aeef;
     padding:10px 30px;
     box-shadow: none;
     border: none;
@@ -4008,7 +4013,7 @@ iframe.c1 {
 }
 
 .confirm_page_6 {
-    background:#7cc576;
+  /*  background:#7cc576;*/
     box-shadow:inset 0 -3px 0 0 rgba(0,0,0,0.3)!important;
     border-radius:2px;
     width:500px;
@@ -4017,7 +4022,7 @@ iframe.c1 {
 
 .pixfort_university_6 .confirm_header {
     text-align:center;
-    color:#fff;
+   /* color:#fff;*/
     margin-left:auto;
     margin-right:auto;
     line-height:35px;
@@ -4033,7 +4038,7 @@ iframe.c1 {
 .pixfort_university_6 .confirm_text {
     text-align:center;
     font-size:16px;
-    color:rgba(255,255,255,0.7);
+   /* color:rgba(255,255,255,0.7);*/
     
     padding-top:10px;
     padding-bottom:30px;
