--- a/stylesheets/landings.css
+++ b/stylesheets/landings.css
@@ -1560,9 +1560,9 @@ iframe.c1 {
 
 /*  Part 2:  #Features      */
 .pixfort_app_3 .cal_style {
-    background:#fcf7e7;
+    background:#f2f2f2;
     background-size:cover;
-    box-shadow: 0px -3px #eae2c8 inset;
+    box-shadow: 0px -3px #bdbdbd inset;
 }
 
 .pixfort_app_3 .pad_top {
